src/main/java/com/example/springhub/error/ControllerExceptionHandler.java
package com.example.springhub.error;

import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.RestControllerAdvice;

import java.util.Date;

@RestControllerAdvice
public class ControllerExceptionHandler {

    @ExceptionHandler(NoSuchUserException.class)
    public ResponseEntity<ErrorMessage> globalExceptionHandler(NoSuchUserException ex) {
        ErrorMessage message = new ErrorMessage(
                HttpStatus.NOT_FOUND.value(),
                new Date(),
                ex.getMessage());

        return ResponseEntity.ok(message);
    }

}
